# python_template

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  AGENTS.md  LICENSE  Makefile  README.md  copier.yaml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: ci.yaml  deploy.yaml
includes/: slugify.jinja
python_package/: __main__.py
scripts/: install-gh.sh
template/: .gitignore  .pre-commit-config.yaml.jinja  .prettierrc.json.jinja  Makefile.jinja  README.md.jinja  pyproject.toml.jinja  {% if use_agents %}AGENTS.md{% endif %}.jinja
template/tests/: package_test.py
template/{% if use_devcontainer %}.devcontainer{% endif %}/: Dockerfile.jinja  devcontainer.json.jinja  docker-compose.yaml.jinja  postCreateCommand.sh
template/{% if use_devcontainer %}.vscode{% endif %}/: extensions.json
template/{% if use_github_actions %}.github{% endif %}/workflows/: ci.yaml.jinja
template/{% if use_vscode %}.vscode{% endif %}/: extensions.json.jinja  launch.json.jinja  settings.json.jinja
template/{{ package_name }}/: __main__.py
tests/: conftest.py
