[tool.poetry]
name = "python-package"
version = "0.1.0"
description = ""
authors = ["Martin Gran <martgra@gmail.com>"]
readme = "README.md"
packages = [{include = "python_package"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
flake8 = "^5.0.4"
isort = "^5.12.0"
black = "^22.10.0"
pydocstyle = "^6.1.1"
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
