[tool.poetry]
name = "python-package"
version = "0.1.0"
description = ""
authors = ["Martin Gran <martgra@gmail.com>"]
readme = "README.md"
packages = [{include = "python_package"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pylint = "^2.15.4"
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.ruff]
line-length = 100
exclude = ["tests/*"]
extend-ignore = ["E203"]

[tool.pytest]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["python_package"]

[tool.pylint]
max-line-length = 100
disable = ["E0401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
